samples/_failures_safe/1761414549_177a48_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed275c8d.c: In function ‘main’:
./samples/SAFE/__tmp_ed275c8d.c:148:9: error: expected expression at end of input
  148 |         if (level == -1)
      |         ^~
./samples/SAFE/__tmp_ed275c8d.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ed275c8d.c:148:9: error: expected declaration or statement at end of input
